<resources>
    <string name="app_name">Financial Planner</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="continue_with_google">Continure With Google</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="search">Search</string>
    <string name="avatar">Avatar</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="stats">Stats</string>
    <string name="total_budget">Total Budget</string>
    <string name="today">Today</string>
    <string name="app_login_name">Welcome to\nFinancial Planner</string>
    <string name="do_not_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="see_all">See all</string>
    <string name="transaction_history">Transaction History</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="note">Note</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="transfer">Transfer</string>
    <string name="transactions">Transactions</string>
    <string name="title">Title</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="_0">0</string>
    <string name="note_with_dot">Note :</string>
    <string name="line">-</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="social">Social</string>
    <string name="gift">Gift</string>
    <string name="clothing">Clothing</string>
    <string name="pets">Pets</string>
    <string name="health_care">Health Care</string>
    <string name="household">Household</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="bank">Bank</string>
    <string name="add_categories">Add Categories</string>
    <string name="salary">Salary</string>
    <string name="petty_cash">Petty Cash</string>
    <string name="interest">Interest</string>
    <string name="investment">Investment</string>
    <string name="bonus">Bonus</string>
    <string name="allowance">Allowance</string>

</resources>