<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addCategoryFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/addAppBar"
        layout="@layout/top_toll_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_12dp"
        android:layout_marginTop="@dimen/d_20dp"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAppBar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_8dp"
        android:layout_marginEnd="@dimen/d_16dp"
        android:backgroundTint="@color/grey"
        android:hint="@string/stats"
        android:inputType="textCapWords"
        android:minHeight="@dimen/d_48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/transparent"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvName"
        app:layout_constraintTop_toTopOf="@id/tvName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/d_12dp"
        android:background="@drawable/bg_btn_radius_orange_12"
        android:gravity="center"
        android:padding="@dimen/d_10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/d_24dp"
        app:layout_constraintTop_toBottomOf="@id/etName" />


</androidx.constraintlayout.widget.ConstraintLayout>