<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transactionFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appBar"
        layout="@layout/top_toll_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/d_12dp"
        android:layout_marginTop="@dimen/d_8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/d_8dp"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <RadioButton
            android:id="@+id/rbIncome"
            android:layout_width="@dimen/d_130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:checked="true"
            android:gravity="center"
            android:paddingVertical="@dimen/d_8dp"
            android:text="@string/income"
            android:textColor="@drawable/radio_color_selector" />

        <RadioButton
            android:id="@+id/rbExpenses"
            android:layout_width="@dimen/d_130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_8dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector_1"
            android:button="@color/transparent"
            android:checked="false"
            android:gravity="center"
            android:paddingVertical="@dimen/d_8dp"
            android:text="@string/expenses"
            android:textColor="@drawable/radio_color_selector_1" />

        <RadioButton
            android:id="@+id/rbTransfer"
            android:layout_width="@dimen/d_130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_8dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector_2"
            android:button="@color/transparent"
            android:checked="false"
            android:gravity="center"
            android:paddingVertical="@dimen/d_8dp"
            android:text="@string/transfer"
            android:textColor="@drawable/radio_color_selector_2" />

    </RadioGroup>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDate"
                android:layout_width="@dimen/d_35dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_12dp"
                android:layout_marginTop="@dimen/d_12dp"
                android:text="@string/date"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/etDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etDate" />

            <com.example.financialplanner.ui.theme.customview.NonTypingEditTextView
                android:id="@+id/etDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_16dp"
                android:layout_marginEnd="@dimen/d_16dp"
                android:backgroundTint="@color/grey"
                android:hint="@string/stats"
                android:inputType="none"
                android:minHeight="@dimen/d_48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/transparent"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/etCategory"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_12dp"
                android:text="@string/category"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/etCategory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etCategory" />

            <com.example.financialplanner.ui.theme.customview.NonTypingEditTextView
                android:id="@+id/etCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_8dp"
                android:layout_marginTop="@dimen/d_16dp"
                android:layout_marginEnd="@dimen/d_16dp"
                android:backgroundTint="@color/grey"
                android:hint="@string/stats"
                android:inputType="textCapWords"
                android:minHeight="@dimen/d_48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/transparent"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvCategory"
                app:layout_constraintTop_toBottomOf="@id/etDate" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_12dp"
                android:text="@string/amount"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/etAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etAmount" />

            <com.example.financialplanner.ui.theme.customview.NonEditableEditView
                android:id="@+id/etAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_16dp"
                android:layout_marginEnd="@dimen/d_16dp"
                android:backgroundTint="@color/grey"
                android:digits="0123456789"
                android:hint="@string/stats"
                android:inputType="numberDecimal"
                android:minHeight="@dimen/d_48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/transparent"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/etCategory"
                app:layout_constraintTop_toBottomOf="@id/etCategory" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_12dp"
                android:text="@string/account"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/etAccount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etAccount" />

            <com.example.financialplanner.ui.theme.customview.NonTypingEditTextView
                android:id="@+id/etAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_16dp"
                android:layout_marginEnd="@dimen/d_16dp"
                android:backgroundTint="@color/grey"
                android:hint="@string/stats"
                android:inputType="textCapWords"
                android:minHeight="@dimen/d_48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/transparent"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/etCategory"
                app:layout_constraintTop_toBottomOf="@id/etAmount" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_12dp"
                android:text="@string/note"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/etNote"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etNote" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etNote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_16dp"
                android:layout_marginEnd="@dimen/d_16dp"
                android:backgroundTint="@color/grey"
                android:hint="@string/stats"
                android:inputType="textCapSentences"
                android:minHeight="@dimen/d_48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/transparent"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/etCategory"
                app:layout_constraintTop_toBottomOf="@id/etAccount" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginTop="@dimen/d_10dp"
                android:background="@color/light_grey"
                android:clickable="false"
                android:textSize="@dimen/s_16sp"
                app:layout_constraintTop_toBottomOf="@+id/etNote"
                tools:text="hi" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_30dp"
                android:text="@string/note"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/etNote"
                app:layout_constraintStart_toStartOf="@id/tvNote"
                app:layout_constraintTop_toBottomOf="@+id/etNote">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/d_12dp"
                    android:layout_weight="0.6"
                    android:background="@drawable/bg_btn_radius_green_12"
                    android:gravity="center"
                    android:padding="@dimen/d_10dp"
                    android:text="@string/save"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvClear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/d_8dp"
                    android:layout_marginEnd="@dimen/d_16dp"
                    android:layout_weight="0.4"
                    android:background="@drawable/bg_btn_radius_transparent_12"
                    android:gravity="center"
                    android:padding="@dimen/d_10dp"
                    android:text="@string/clear" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="402dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llPopUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_0_0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_half">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_B3B1B1"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/d_5dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPopUpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/d_14dp"
                android:layout_weight="1"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/d_15dp"
                android:src="@drawable/ic_close" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llCalendarMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/d_10dp"
            app:layout_constraintTop_toBottomOf="@id/llBar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLeftArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/d_2dp"
                android:src="@drawable/ic_arrow_left"
                app:tint="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                tools:text="September" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivRightArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/d_2dp"
                android:src="@drawable/ic_arrow_right"
                app:tint="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvCategory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llCalendarMonth" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>